Ported structures to 26.1.x (#2630)
* Structures port

* Resolved code review comments and removed every @NotNull

* Resolved code review comments

* Resolved review comments